@@ -1,1 +1,0 @@
-bin/python @PREFIX@/bin/python2n3
